<resources>
    <string name="app_name">Healthy</string>
    <string name="password">Password</string>
    <string name="bmi">BMI</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="your_bmi">your bmi</string>
    <string name="cal">Calculate</string>
    <string name="user_id">User Id</string>
    <string name="btn_login">Login</string>
    <string name="reg_new">Register New Account</string>
    <string name="back_menu">Back</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">E-mail</string>
    <string name="repassword">Re-Password</string>
    <string name="addWeight">Add Weight</string>


</resources>
