<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:background="@color/colorGreen"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:padding="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_menu"
                android:id="@+id/bmi_backBnt"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:drawableLeft="@drawable/height"
                android:id="@+id/bmi_height"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:drawableLeft="@drawable/weight"
                android:id="@+id/bmi_weight"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal"
                android:id="@+id/btn_cal"></Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_bmi"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="30dp"
                android:id="@+id/ans_bmi"
                />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>