<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:background="@color/colorGreen"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:padding="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="60dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableLeft="@drawable/mail"
            android:id="@+id/reg_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableLeft="@drawable/psw"
            android:id="@+id/reg_password"
            android:inputType="textPassword"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword"
            android:drawableLeft="@drawable/psw"
            android:id="@+id/reg_rePassword"
            android:inputType="textPassword"/>




        <Button
            android:id="@+id/reg_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_new" />


    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>