<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/pic"
                android:layout_gravity="center"
                />

            <EditText
                android:inputType="text"
                android:drawableLeft="@drawable/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                android:layout_gravity="center"
                android:id="@+id/login_userid"
                />
            <EditText
                android:drawableLeft="@drawable/psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:id="@+id/login_password"
                />

            <Button
                android:text="@string/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_btn"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/reg_new"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/colorPrimary"
                android:id="@+id/login_register" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>